<resources>

	<string name="threshold_relation_above">above</string>
	<string name="threshold_relation_below">below</string>
	<string name="warning_no_location_clueless"><b>The widget needs to know your where you are</b>. Not sure why but the app doesn\'t see that there\'s location.</string>
	<string name="warning_no_location_permission"><b>The widget needs to know your where you are</b>. Please allow access to the precise location by tapping here.</string>
	<string name="warning_no_location_permission_settings"><b>The widget needs to know your where you are</b>. Please allow access to the precise location in the Settings app by tapping here.</string>
	<string name="warning_no_location"><b>The widget needs to know where you are</b>. Please enable your Location in Settings app by tapping here, then wait a moment.</string>
	<string name="warning_no_location_rationale">The widget needs to know where you are to calculate the location of the Sun in the sky. Please allow access to the device\'s precise location.</string>
	<string name="warning_no_location_rationale_background">Sometimes the home screen widget updates happen while there\'s an app running. Since Android 10 it is required to specifically allow this to apps. Please select the “%1$s” option in the next screen.</string>
	<string name="warning_no_location_settings">Can\'t start Location Settings, sorry.</string>
	<string name="warning_maximum">The Sun will not go above %1$.1f° in the foreseeable future, setting %2$.1f° will always yield the same non-results.</string>
	<string name="warning_minimum">The Sun will not go below %1$.1f° in the foreseeable future, setting %2$.1f° will always yield the same non-results.</string>
	<string name="message_selected_angle_above">The widget will show the current angle and the time range when the Sun is above %1$.0f°.</string>
	<string name="message_selected_angle_below">The widget will show the current angle and the time range when the Sun is below %1$.0f°.</string>
	<string name="cd_selected_angle">Visualization of selected angle threshold</string>
	<string name="config_done">Done</string>
	<string name="config_title">Sun Position Widget</string>
	<string name="config_info">Info</string>
	<string name="pref_showPartOfDay_title">Show Part of Day</string>
	<string name="pref_showLastUpdateTime_title">Show Last Update</string>
	<string name="config_help">
		<big><b>What\'s that degree (°)?</b></big>
		\n<i>Altitude angle</i>.
		The widget shows the current position of the sun which is the angle between the horizon and the sun:
		\n<annotation drawable="widget_1x1_preview">&#xFFFC;</annotation>

		\n\n<big><b>Threshold</b></big>
		\n<i>You can set a threshold for the sun\'s position.</i>
		The threshold will show the time range when the sun\'s altitude angle is above/below the threshold.
		The time range will be <b>bold</b> when the sun is in the right position.
		The start/end time of the range will be <annotation color="coming_soon" bgcolor="widget_highlight">highlighted</annotation> up to 30 minutes before the sun enters/leaves the specified range.
		\n<b>For example</b>: if the threshold is above 0° this is good for a soft alert before sunrise/sunset.

		\n\n<big><b>Hide parts of the widget</b></big>
		\n<i>Open the options menu to do so.</i>
		You can show/hide the part of the day and last update time displays in case your phone\'s current launcher doesn\'t give enough space for the widget.
	</string>

</resources>
