<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="net.twisterrob.sun.android.SunAngleWidgetConfiguration"
	tools:ignore="UnusedAttribute"
	>
	<item
		android:title="Mock"
		android:icon="@android:drawable/ic_menu_more"
		android:visible="@bool/in_test"
		app:showAsAction="ifRoom"
		tools:ignore="HardcodedText"
		>
		<menu>
			<item
				android:id="@+id/action_mock_date"
				android:title="Date"
				android:icon="@android:drawable/ic_menu_month"
				tools:visible="true"
				/>
			<item
				android:id="@+id/action_mock_time"
				android:title="Time"
				android:icon="@android:drawable/ic_menu_recent_history"
				/>
			<item
				android:id="@+id/action_mock_angle"
				android:title="Angle"
				android:icon="@android:drawable/ic_menu_rotate"
				/>
			<item
				android:id="@+id/action_mock_fill"
				android:title="Global > Pre-fill widgets"
				android:icon="@android:drawable/ic_menu_agenda"
				/>
			<item
				android:id="@+id/action_mock_clearAll"
				android:title="Global > Clear all"
				android:icon="@android:drawable/ic_menu_close_clear_cancel"
				/>
		</menu>
	</item>
	<item
		android:id="@+id/action_help"
		android:title="@string/config_info"
		android:icon="@android:drawable/ic_menu_help"
		app:showAsAction="ifRoom"
		/>
	<item
		android:id="@+id/action_show_partOfDay"
		android:title="@string/pref_showPartOfDay_title"
		android:icon="@android:drawable/ic_menu_gallery"
		android:checkable="true"
		app:showAsAction="never"
		tools:checked="true"
		/>
	<item
		android:id="@+id/action_show_lastUpdateTime"
		android:title="@string/pref_showLastUpdateTime_title"
		android:icon="@android:drawable/ic_menu_gallery"
		android:checkable="true"
		app:showAsAction="never"
		/>
</menu>
