<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="8dp"
	tools:context="net.twisterrob.sun.android.SunAngleWidgetConfiguration"
	>

	<Button
		android:id="@+id/btn_ok"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:text="@string/config_done"
		/>

	<include
		android:id="@+id/warning"
		layout="@layout/warning_banner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/btn_ok"
		android:visibility="gone"
		tools:visibility="visible"
		/>

	<TextView
		android:id="@+id/message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:textIsSelectable="false"
		tools:text="@string/message_selected_angle_above"
		/>

	<ToggleButton
		android:id="@+id/thresholdRelation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/warning"
		android:textOn="@string/threshold_relation_above"
		android:textOff="@string/threshold_relation_below"
		android:checked="true"
		/>

	<Spinner
		android:id="@+id/preset"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/thresholdRelation"
		app:layout_constraintTop_toTopOf="@id/thresholdRelation"
		app:layout_constraintBottom_toBottomOf="@id/thresholdRelation"
		android:entries="@array/angle_preset"
		/>

	<net.twisterrob.android.view.VerticalSeekBar
		android:id="@+id/angle"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@id/visualization"
		app:layout_constraintBottom_toBottomOf="@id/visualization"
		android:max="180"
		android:mirrorForRtl="false"
		android:thumb="@drawable/ic_sun"
		android:tickMark="@color/invalid"
		android:tickMarkTint="@color/invalid"
		app:tickMark="@color/invalid"
		tools:ignore="UnusedAttribute"
		tools:progress="90"
		>
		<!-- lint:UnusedAttribute: mirrorForRtl is API 18+, which is where it matters only. -->
	</net.twisterrob.android.view.VerticalSeekBar>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/angle_ticks"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:paddingTop="16dp"
		android:paddingBottom="16dp"
		android:layout_marginRight="-20dp"
		android:layout_marginEnd="-20dp"
		app:layout_constraintEnd_toStartOf="@id/angle"
		app:layout_constraintTop_toTopOf="@id/angle"
		app:layout_constraintBottom_toBottomOf="@id/angle"
		android:clipToPadding="false"
		tools:ignore="HardcodedText"
		>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_p90"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintGuide_begin="16dp"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_p90"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_p90"
			android:text="90°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_p50"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.277777"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_p50"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_p50"
			android:text="50°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_p18"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.4"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_p18"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_p18"
			android:text="18°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_p12"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.4333333"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_p12"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_p12"
			android:text="12°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_p6"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.466666"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_p6"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_p6"
			android:text="6°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_0"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.5"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_0"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_0"
			android:text="0°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_n6"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.533333"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_n6"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_n6"
			android:text="-6°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_n12"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.566666"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_n12"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_n12"
			android:text="-12°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_n18"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="0.6"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_n18"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_n18"
			android:text="-18°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/tick_guide_n90"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintGuide_percent="1.0"
			android:orientation="horizontal"
			/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/tick_guide_n90"
			app:layout_constraintBottom_toBottomOf="@id/tick_guide_n90"
			android:text="-90°"
			android:drawableEnd="@drawable/tick"
			android:drawablePadding="8dp"
			android:drawableRight="@drawable/tick"
			android:includeFontPadding="false"
			/>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<ImageView
		android:id="@+id/visualization"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_margin="4dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/angle_ticks"
		app:layout_constraintTop_toBottomOf="@id/message"
		app:layout_constraintBottom_toTopOf="@id/thresholdRelation"
		android:contentDescription="@string/cd_selected_angle"
		tools:ignore="RedundantDescriptionCheck"
		tools:src="@drawable/ic_launcher"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>
